--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           <link rel="stylesheet" href="css/skeleton.css" />
           <link rel="stylesheet" href="css/custom.css" />
           <title>Name Generator</title>
+          <script src="./app.js"></script>
      </head>
 
      <body>
@@ -19,7 +20,7 @@
                <div id="content" class="content">
                     <h1>Generate Names</h1>
 
-                    <form action="#" id="generate-names">
+                    <form action="#" id="generateNames">
                          <div class="row">
                               <div class="six columns">
                                    <label for="country">
