--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
           <link rel="stylesheet" href="css/skeleton.css" />
           <link rel="stylesheet" href="css/custom.css" />
           <title>Name Generator</title>
-          <script src="./app.js"></script>
      </head>
 
      <body>
@@ -80,5 +79,6 @@
                     </form>
                </div>
           </div>
+  <script src="./app.js" />
      </body>
 </html>
