--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                          <div class="row">
                               <div class="six columns">
                                    <label for="country">
-                                       Filter By Country:</label>
+                                        Filter By Country:</label
+                                   >
                                    <select class="u-full-width" id="country">
                                         <option value="">-- Select --</option>
                                         <option value="argentina">
@@ -79,6 +80,7 @@
                     </form>
                </div>
           </div>
-  <script src="./app.js" />
+          
+          <script src="./app.js"></script>
      </body>
 </html>
